small updates with new package updates

--- a/ManuScript/refs.bib
+++ b/ManuScript/refs.bib
@@ -29,6 +29,28 @@
    type = {Journal Article}
 }
 
+@article{Berger1982,
+   author = {Berger, Roger L.},
+   title = {Multiparameter Hypothesis Testing and Acceptance Sampling},
+   journal = {Technometrics},
+   volume = {24},
+   number = {4},
+   pages = {295-300},
+   year = {1982},
+   type = {Journal Article}
+}
+
+@article{Berger1996,
+   author = {Berger, Roger L. and Hsu, Jason C.},
+   title = {Bioequivalence Trials, Intersection–Union Tests and Equivalence Confidence Sets},
+   journal = {Statistical Science},
+   volume = {11},
+   number = {4},
+   pages = {283-319},
+   year = {1996},
+   type = {Journal Article}
+}
+
 @article{RN29695,
    author = {Bloom, Howard S.},
    title = {Minimum Detectable Effects: A Simple Way to Report the Statistical Power of Experimental Designs},
@@ -65,11 +87,20 @@
 }
 
 @unpublished{RN33092,
-   author = {Chrstensen, G.S., & Miquel E.},
+   author = {Christensen, G.S., & Miquel E.},
    title = {Transparancey, Reproducibility, and the Credibility of Economics Research},
    booktitle = {NBER Working Paper #22989},
    year = {2-16},
    type = {Unpublished Work}
+}
+
+@article{Deng2008,
+   author = {Deng, Xutao and Xu, Jun and Wang, Charles},
+   title = {Improving the power for detecting overlapping genes from multiple DNA microarray-derived gene lists},
+   journal = {BMC Bioinformatics},
+   volume = {9},
+   year = {2008},
+   type = {Journal Article}
 }
 
 @article{RN4473,
