--- a/project_tracker.Rmd
+++ b/project_tracker.Rmd
@@ -16,7 +16,7 @@ This list is not complete - to be added to and checked off by everyone.
 - Complete all testing (Kristen and Luke, TBD)
     Done enough, will add tests as issues arise.
 - Source code completed, ASCII files, with formatted help files and be packaged for easy installation. 
-    Work in progress.
+    Done.
 - Submit package to CRAN - including JSS submission as vignettes in the package. 
 - Make sure all functions still work when specifying one outcome (Kristen)
      Done  
@@ -33,13 +33,9 @@ This list is not complete - to be added to and checked off by everyone.
 
 # Discussion questions
 
-- (written by Kristen)
-- hash out power definitions: unadjusted p-values for complete power, whether or not to include zero outcomes for min power, complete power
 - one tailed v. two tailed power
-- update() for pump_sample, pump_mdes
 - why are we hiding vignette output?
 - better name for "design" because it currently means design + model. Scenario?
-- how to share the package for user testing
 
 # Shiny app
 - Aim to have draft to share in next meeting
