--- a/ManuScript/refs.bib
+++ b/ManuScript/refs.bib
@@ -422,3 +422,13 @@ Educational Research},
    type = {Book}
 }
 
+@book{@MTSAS,
+   author = {Westfall, Peter H, Tobias, R.D. and Wolfinger, R. D.},
+   title = {Multiple comparisons and multiple tests using SAS},
+   publisher = {The SAS Institute},
+   ISBN = {9781607648857, 9781607647836, 9781642955187},
+   year = {2011},
+   type = {Book}
+}
+
+
