--- a/ManuScript/refs.bib
+++ b/ManuScript/refs.bib
@@ -19,6 +19,18 @@
    type = {Journal Article}
 }
 
+@article{lme4,
+    title = {Fitting Linear Mixed-Effects Models Using {lme4}},
+    author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and
+      Steve Walker},
+    journal = {Journal of Statistical Software},
+    year = {2015},
+    volume = {67},
+    number = {1},
+    pages = {1--48},
+    doi = {10.18637/jss.v067.i01},
+  }
+
 @article{RN33090,
    author = {Benjamin, Y., & Yekutieli. D. },
    title = {The control of the false discovery rate: A practical and powerful approach to mulitple testing under depedency},
