--- a/Validation/validate_d21_m2fcfr.Rmd
+++ b/Validation/validate_d21_m2fcfr.Rmd
@@ -19,6 +19,8 @@ output:
     fig_height: 8
     fig_width: 10
     toc: yes
+editor_options: 
+  chunk_output_type: console
 ---
 
 Design: Blocked RCT, with 2 levels, and randomization done at level 1 (individual level).
