--- a/ManuScript/refs.bib
+++ b/ManuScript/refs.bib
@@ -451,4 +451,14 @@ Educational Research},
    type = {Government Document}
 }
 
+@article{GELMANETAL2012,
+   author = {Gelman A., Hill J., Yajima M.},
+   title = {Why We (Usually) Don't Have to Worry About Multiple Comparisons},
+   journal = {Journal of Research on Educational Effectiveness},
+   volume = {5},
+   pages = {189-211},
+   year = {2012},
+   type = {Journal Article}
+}
+
 
